--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="HOME-lesspending">
       <div class="div">
         <div class="overlap">
-          <img class="line" src="img/line-7.svg" />
+          <img class="line" src="images/linea_grande.png" />
           <div class="group">
             <div class="overlap-group">
               <div class="rectangle"></div>
@@ -47,13 +47,13 @@
             </div>
           </div>
           <div class="text-wrapper">Acerca de</div>
+          <img class="image" src="images/flecha.png" />
           <div class="text-wrapper-2">Conócenos</div>
+          <img class="img" src="images/flecha.png" />
           <div class="text-wrapper-3">Contáctanos</div>
+          <img class="image-2" src="images/flecha.png" />
           <div class="text-wrapper-4">Paquetes</div>
-          <img class="image" src="images/flecha-derecha.png" />
-          <img class="img" src="images/flecha-derecha.png" />
-          <img class="image-2" src="images/flecha-derecha.png" />
-          <img class="image-3" src="images/flecha-derecha.png" />
+          <img class="image-3" src="images/flecha.png" />
         </div>
         <div class="overlap-2">
           <div class="text-wrapper-5">Contacto</div>
@@ -64,22 +64,22 @@
             >
           </p>
           <p class="p">©2023 LesSpending. All rights reserved.</p>
-          <img class="element" src="img/2-2.png" />
+          <img class="element" src="images/logo.png" />
         </div>
-        <img class="line-2" src="img/line-8.svg" />
-        <img class="line-3" src="img/line-9.svg" />
+        <img class="line-2" src="images/linea_grande.png" />
+        <img class="line-3" src="images/linea_grande.png" />
         <div class="overlap-3">
           <div class="rectangle-5"></div>
-          <img class="line-4" src="img/line-1.svg" />
-          <div class="rectangle-6"></div>
-          <div class="rectangle-7"></div>
+          <img class="line-4" src="images/linea_grande.png" />
+          <img class="element-2" src="images/logo.png" />
           <div class="text-wrapper-6">Iniciar Sesión</div>
           <div class="text-wrapper-7">Registrarse</div>
-          <img class="line-5" src="img/line-2.svg" />
-          <img class="element-2" src="img/2-1.png" />
+          <img class="line-5" src="images/linea_vertical.png" />
+          <img class="line-6" src="images/linea_vertical.png" />
+          <img class="line-7" src="images/linea_vertical.png" />
         </div>
         <div class="overlap-4">
-          <div class="rectangle-8"></div>
+          <div class="rectangle-6"></div>
           <div class="text-wrapper-8">¡Inicia ahora!</div>
         </div>
         <div class="text-wrapper-9">¡Hola! Somos LesSpending.</div>
@@ -97,13 +97,31 @@
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
           consequat.
         </p>
-        <img class="captura-de-pantalla" src="images/hola_lessp.png" />
-        <img class="captura-de-pantalla-2" src="img/captura-de-pantalla-2023-09-09-a-la-s-8-39-35-p-m-1.png" />
-        <img class="captura-de-pantalla-3" src="img/captura-de-pantalla-2023-09-10-a-la-s-10-35-37-a-m-1.png" />
-        <img class="rectangle-9" src="img/rectangle-42.png" />
-        <div class="rectangle-10"></div>
-        <div class="rectangle-11"></div>
-        <div class="rectangle-12"></div>
+        <img class="captura-de-pantalla" src="images/hola_less.png" />
+        <img class="captura-de-pantalla-2" src="images/como_funciona.png" />
+        <img class="captura-de-pantalla-3" src="images/quienes_somos.png" />
+        <img class="rectangle-7" src="images/fonddd.png" />
+        <div class="overlap-5">
+          <div class="text-wrapper-16">Paquete Básico</div>
+          <div class="text-wrapper-17">$0</div>
+          <div class="text-wrapper-18">Registro de gastos/ingresos</div>
+          <div class="text-wrapper-19">Visualización de gráficas</div>
+        </div>
+        <div class="overlap-6">
+          <div class="text-wrapper-20">Paquete Ultra</div>
+          <div class="text-wrapper-21">$130.00</div>
+          <div class="text-wrapper-22">Registro de gastos/ingresos</div>
+          <div class="text-wrapper-23">Visualización de gráficas</div>
+          <div class="text-wrapper-24">Usuario invitado</div>
+          <div class="text-wrapper-25">Asesor</div>
+        </div>
+        <div class="overlap-7">
+          <div class="text-wrapper-26">Paquete Premium</div>
+          <div class="text-wrapper-27">$40.00</div>
+          <div class="text-wrapper-28">Registro de gastos/ingresos</div>
+          <div class="text-wrapper-29">Visualización de gráficas</div>
+          <div class="text-wrapper-30">Usuario invitado</div>
+        </div>
       </div>
     </div>
   </body>
