--- a/log_in.html
+++ b/log_in.html
@@ -30,7 +30,7 @@
             <div class="text-wrapper-3">Continúa con Google</div>
             <img class="image-2" src="images/google_logo.png" />
           </div>
-          <img class="image-3" src="images/circulo-marca-x.png" />
+          <img class="image-3" src="images/close.png" />
           <div class="text-wrapper-4">Inicio de sesión</div>
           <div class="group">
             <div class="overlap-group-2">
@@ -41,51 +41,6 @@
           </div>
           <div class="text-wrapper-6">Registrate ahora</div>
           <img class="image-4" src="images/hola_lessp.png" />
-          <div class="div-wrapper"><div class="text-wrapper-7">Iniciar sesión</div></div>
-        </div>
-      </div>
-    </div>
-  </body>
-</html>
-
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="globals.css" />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="sign-in">
-      <div class="overlap-wrapper">
-        <div class="overlap">
-          <div class="text-wrapper">Correo:</div>
-          <div class="rectangle"></div>
-          <div class="div">Contraseña:</div>
-          <p class="p">¿No cuentas con una cuenta?</p>
-          <div class="rectangle-2"></div>
-          <div class="overlap-group">
-            <div class="text-wrapper-2">Continúa con Facebook</div>
-            <img class="image" src="img/image-8.png" />
-          </div>
-          <div class="overlap-2">
-            <div class="text-wrapper-2">Continúa con Instagram</div>
-            <img class="img" src="img/image-7.png" />
-          </div>
-          <div class="overlap-3">
-            <div class="text-wrapper-3">Continúa con Google</div>
-            <img class="image-2" src="img/image-6.png" />
-          </div>
-          <img class="image-3" src="img/image-4.png" />
-          <div class="text-wrapper-4">Inicio de sesión</div>
-          <div class="group">
-            <div class="overlap-group-2">
-              <img class="line" src="img/line-9.svg" />
-              <div class="rectangle-3"></div>
-              <div class="text-wrapper-5">ó</div>
-            </div>
-          </div>
-          <div class="text-wrapper-6">Registrate ahora</div>
-          <img class="image-4" src="img/image-5.png" />
           <div class="div-wrapper"><div class="text-wrapper-7">Iniciar sesión</div></div>
         </div>
       </div>
