--- a/sign_up.html
+++ b/sign_up.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@300;400;500&amp;display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"  data-tag="font">
+        <title>Registro</title>
       </head>
   </head>
   <body>
@@ -35,7 +36,7 @@
           </div>
           <div class="div-wrapper"><div class="text-wrapper-5">Registrarse</div></div>
           <div class="text-wrapper-6">Inicia sesión ahora</div>
-          <img class="image-3" src="images/circulo-marca-x.png" />
+          <img class="image-3" src="images/close.png" />
           <div class="text-wrapper-7">Registro</div>
           <div class="group">
             <div class="overlap-group-2">
@@ -44,7 +45,7 @@
               <div class="text-wrapper-8">ó</div>
             </div>
           </div>
-          <img class="image-4" src="images/hola_lessp.png" />
+          <img class="image-4" src="images/hola_less.png" />
           <div class="overlap-5">
             <div class="rectangle"></div>
             <div class="text-wrapper-9">Fecha de nacimiento</div>
