--- a/log_in.html
+++ b/log_in.html
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="text-wrapper-6">Registrate ahora</div>
-          <img class="image-4" src="images/hola_lessp.png" />
+          <img class="image-4" src="images/hola_less.png" />
           <div class="div-wrapper"><div class="text-wrapper-7">Iniciar sesión</div></div>
         </div>
       </div>
