--- a/log_in.html
+++ b/log_in.html
@@ -15,23 +15,27 @@
       <div class="overlap-wrapper">
         <div class="overlap">
           <div class="text-wrapper">Correo:</div>
-          <div class="rectangle"></div>
+          <input type="text" class="rectangle" />
           <div class="div">Contraseña:</div>
           <p class="p">¿No cuentas con una cuenta?</p>
-          <div class="rectangle-2"></div>
-          <div class="overlap-group">
+          <input type="password" class="rectangle-2"/>
+
+          <button class="overlap-group">
             <div class="text-wrapper-2">Continúa con Facebook</div>
             <img class="image" src="images/facebook_logo.png" />
-          </div>
-          <div class="overlap-2">
+          </button>
+
+          <button class="overlap-2">
             <div class="text-wrapper-2">Continúa con Instagram</div>
             <img class="img" src="images/logo_instagram.png" />
-          </div>
-          <div class="overlap-3">
+          </button>
+
+          <button class="overlap-3">
             <div class="text-wrapper-3">Continúa con Google</div>
             <img class="image-2" src="images/google_logo.png" />
-          </div>
-          <img class="image-3" src="images/close.png" />
+          </button>
+
+          <input type="image" class="image-3" src="images/close.png" />
           <div class="text-wrapper-4">Inicio de sesión</div>
           <div class="group">
             <div class="overlap-group-2">
@@ -40,9 +44,11 @@
               <div class="text-wrapper-5">ó</div>
             </div>
           </div>
-          <div class="text-wrapper-6">Registrate ahora</div>
+          <button class="text-wrapper-6">Registrate ahora</button>
           <img class="image-4" src="images/hola_less.png" />
-          <div class="div-wrapper"><div class="text-wrapper-7">Iniciar sesión</div></div>
+          <button class="div-wrapper">
+            <div class="text-wrapper-7">Iniciar sesión</div>
+          </button>          
         </div>
       </div>
     </div>
