--- a/log_in_admin.html
+++ b/log_in_admin.html
@@ -15,13 +15,14 @@
       <div class="overlap-group-wrapper">
         <div class="overlap-group">
           <div class="text-wrapper">Correo:</div>
-          <div class="rectangle"></div>
+          <input type="text" class="rectangle" />
           <div class="div">Contraseña:</div>
-          <div class="rectangle-2"></div>
-          <img class="image" src="images/close.png" />
+          <input type="password" class="rectangle-2"/>
           <div class="text-wrapper-2">Inicio de sesión</div>
           <img class="img" src="images/hola_less.png" />
-          <div class="overlap"><div class="text-wrapper-3">Iniciar sesión</div></div>
+          <button class="overlap">
+            <div class="text-wrapper-3">Iniciar sesión</div>
+          </button>          
         </div>
       </div>
     </div>
