--- a/log_in.html
+++ b/log_in.html
@@ -47,6 +47,12 @@
             </div>
           </div>
           <button class="text-wrapper-6" onclick="openRegister()">Registrate ahora</button>
+          <script>
+            function redirectRegister() {
+
+                window.location.href = 'log_in.html';
+            }
+        </script>
           <img class="image-4" src="images/hola_less.png" />
           <button class="div-wrapper">
             <div class="text-wrapper-7" onclick="openHome()">Iniciar sesión</div>
