--- a/log_in_admin.html
+++ b/log_in_admin.html
@@ -39,6 +39,14 @@
           <button class="overlap">
             <div class="text-wrapper-3">Iniciar sesión</div>
           </button>          
+          <script>
+            // Elemento del botón
+            const iniciarSesionButton = document.querySelector('.overlap');
+            iniciarSesionButton.addEventListener('click', function() {
+                // Redirige a usuarios.html
+                window.location.href = 'usuarios.html';
+            });
+        </script>
         </div>
       </div>
     </div>
