--- a/mis_gastos.html
+++ b/mis_gastos.html
@@ -73,6 +73,28 @@
         </div>
       </div>
     </div>
+    <script>
+      // Elementos
+      const misDatosButton = document.querySelector('.div');
+      const misIngresosButton = document.querySelector('.text-wrapper-2');
+      const cerrarButton = document.querySelector('.image');
+  
+      // Evento al hacer clic para cada botón
+      misDatosButton.addEventListener('click', function() {
+          // Redirige a mi_perfil.html
+          window.location.href = 'mi_perfil.html';
+      });
+  
+      misIngresosButton.addEventListener('click', function() {
+          // Redirige a mis_ingresos.html
+          window.location.href = 'mis_ingresos.html';
+      });
+  
+      cerrarButton.addEventListener('click', function() {
+          // Redirige a registrar_gastos.html
+          window.location.href = 'registrar_gasto.html';
+      });
+  </script>
   </body>
 </html>
 
