--- a/registrar_gasto.html
+++ b/registrar_gasto.html
@@ -284,7 +284,7 @@
 
               <div class="overlap-5">
                 <input type="text" class="text-wrapper-28">
-                <img class="lesspending" src="images/usuario.png" />
+                <a href="mi_perfil.html"><img class="lesspending" src="images/usuario.png" /></a>
               </div>
 
             <img class="rectangle-23" src="images/Fam_gastos.png" />
